--- a/index.html
+++ b/index.html
@@ -15,37 +15,40 @@
     </style>
 </head>
 <body>
-    <header>
-        <h1>Your Name</h1>
-        <p>Computer Science Enthusiast | Developer | Problem Solver</p>
-        <nav>
-            <a href="#about">About Me</a>
-            <a href="#projects">Projects</a>
-            <a href="#contact">Contact</a>
-        </nav>
-    </header>
+    <div class="container">
+        <header>
+            <h1>Your Name</h1>
+            <p>Computer Science Enthusiast | Developer | Problem Solver</p>
+            <nav>
+                <a href="#about">About Me</a>
+                <a href="#projects">Projects</a>
+                <a href="#contact">Contact</a>
+            </nav>
+        </header>
 
-    <section id="about">
-        <h2>About Me</h2>
-        <p>Hello! I’m passionate about Computer Science and love coding, algorithms, and building projects.</p>
-    </section>
+        <section id="about">
+            <h2>About Me</h2>
+            <p>Hello! I’m passionate about Computer Science and love coding, algorithms, and building projects.</p>
+        </section>
 
-    <section id="projects">
-        <h2>Projects</h2>
-        <ul>
-            <li><b>Project 1:</b> Description and <a href="https://github.com/yourusername/project1" target="_blank">GitHub Repo</a></li>
-            <li><b>Project 2:</b> Description and <a href="https://github.com/yourusername/project2" target="_blank">GitHub Repo</a></li>
-        </ul>
-    </section>
+        <section id="projects">
+            <h2>Projects</h2>
+            <ul>
+                <li><b>Project 1:</b> Description and <a href="https://github.com/yourusername/project1" target="_blank">GitHub Repo</a></li>
+                <li><b>Project 2:</b> Description and <a href="https://github.com/yourusername/project2" target="_blank">GitHub Repo</a></li>
+            </ul>
+        </section>
 
-    <section id="contact">
-        <h2>Contact</h2>
-        <p>Email: your.email@example.com</p>
-        <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
-    </section>
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Email: your.email@example.com</p>
+            <p>GitHub: <a href="https://github.com/yourusername" target="_blank">github.com/yourusername</a></p>
+        </section>
 
-    <footer>
-        &copy; 2025 Your Name
-    </footer>
+        <footer>
+            &copy; 2025 Your Name
+        </footer>
+    </div>
 </body>
+
 </html>
